// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal#<SwitchField /> Should be changed styled by theme 1`] = `
.c0 {
  display: block;
  position: relative;
  margin: 0;
  font-size: 1rem;
  margin: 0.4em 0;
  color: hotpink;
}

<ThemeProvider
  theme={
    Object {
      "rdf": Object {
        "background": "rgb(255, 255, 255)",
        "backgroundDisabled": "rgb(245, 245, 245)",
        "backgroundEnter": "rgb(255, 255, 255)",
        "backgroundError": "rgb(255, 255, 255)",
        "backgroundFocus": "rgb(255, 255, 255)",
        "borderColor": "rgb(219, 219, 219)",
        "borderColorDisabled": "rgb(245, 245, 245)",
        "borderColorEnter": "rgb(204, 204, 204)",
        "borderColorError": "rgb(245, 0, 87)",
        "borderColorFocus": "rgb(0, 188, 212)",
        "borderRadius": "3px",
        "borderWidth": "1px",
        "boxShadow": "0 0 0 transparent",
        "boxShadowDisabled": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
        "boxShadowEnter": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
        "color": "hotpink",
        "controlHeight": "2.7em",
        "disabled": "green",
        "error": "rgb(245, 0, 87)",
        "fontSize": "1rem",
        "selectArrowColor": "rgb(0, 188, 212)",
        "spinnerColor": "rgb(0, 188, 212)",
        "spinnerDuration": "500ms",
        "transitionDuration": "110ms",
        "transitionProperty": "color, box-shadow, border",
        "transitionTimingFunction": "cubic-bezier(.25, .46, .45, .94)",
      },
    }
  }
>
  <styled.div
    theme={
      Object {
        "rdf": Object {
          "background": "rgb(255, 255, 255)",
          "backgroundDisabled": "rgb(245, 245, 245)",
          "backgroundEnter": "rgb(255, 255, 255)",
          "backgroundError": "rgb(255, 255, 255)",
          "backgroundFocus": "rgb(255, 255, 255)",
          "borderColor": "rgb(219, 219, 219)",
          "borderColorDisabled": "rgb(245, 245, 245)",
          "borderColorEnter": "rgb(204, 204, 204)",
          "borderColorError": "rgb(245, 0, 87)",
          "borderColorFocus": "rgb(0, 188, 212)",
          "borderRadius": "3px",
          "borderWidth": "1px",
          "boxShadow": "0 0 0 transparent",
          "boxShadowDisabled": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
          "boxShadowEnter": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
          "color": "rgb(54, 54, 54)",
          "controlHeight": "2.7em",
          "disabled": "rgb(204, 204, 204)",
          "error": "rgb(245, 0, 87)",
          "fontSize": "1rem",
          "selectArrowColor": "rgb(0, 188, 212)",
          "spinnerColor": "rgb(0, 188, 212)",
          "spinnerDuration": "500ms",
          "transitionDuration": "110ms",
          "transitionProperty": "color, box-shadow, border",
          "transitionTimingFunction": "cubic-bezier(.25, .46, .45, .94)",
        },
      }
    }
  >
    <div
      className="c0"
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Internal#<SwitchField /> Should be changed styled by theme 2`] = `
.c0 {
  display: block;
  position: relative;
  margin: 0;
  font-size: 1rem;
  margin: 0.4em 0;
  color: green;
}

<ThemeProvider
  theme={
    Object {
      "rdf": Object {
        "background": "rgb(255, 255, 255)",
        "backgroundDisabled": "rgb(245, 245, 245)",
        "backgroundEnter": "rgb(255, 255, 255)",
        "backgroundError": "rgb(255, 255, 255)",
        "backgroundFocus": "rgb(255, 255, 255)",
        "borderColor": "rgb(219, 219, 219)",
        "borderColorDisabled": "rgb(245, 245, 245)",
        "borderColorEnter": "rgb(204, 204, 204)",
        "borderColorError": "rgb(245, 0, 87)",
        "borderColorFocus": "rgb(0, 188, 212)",
        "borderRadius": "3px",
        "borderWidth": "1px",
        "boxShadow": "0 0 0 transparent",
        "boxShadowDisabled": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
        "boxShadowEnter": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
        "color": "hotpink",
        "controlHeight": "2.7em",
        "disabled": "green",
        "error": "rgb(245, 0, 87)",
        "fontSize": "1rem",
        "selectArrowColor": "rgb(0, 188, 212)",
        "spinnerColor": "rgb(0, 188, 212)",
        "spinnerDuration": "500ms",
        "transitionDuration": "110ms",
        "transitionProperty": "color, box-shadow, border",
        "transitionTimingFunction": "cubic-bezier(.25, .46, .45, .94)",
      },
    }
  }
>
  <styled.div
    disabled={true}
    theme={
      Object {
        "rdf": Object {
          "background": "rgb(255, 255, 255)",
          "backgroundDisabled": "rgb(245, 245, 245)",
          "backgroundEnter": "rgb(255, 255, 255)",
          "backgroundError": "rgb(255, 255, 255)",
          "backgroundFocus": "rgb(255, 255, 255)",
          "borderColor": "rgb(219, 219, 219)",
          "borderColorDisabled": "rgb(245, 245, 245)",
          "borderColorEnter": "rgb(204, 204, 204)",
          "borderColorError": "rgb(245, 0, 87)",
          "borderColorFocus": "rgb(0, 188, 212)",
          "borderRadius": "3px",
          "borderWidth": "1px",
          "boxShadow": "0 0 0 transparent",
          "boxShadowDisabled": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
          "boxShadowEnter": "0 2px 2px rgba(0, 0, 0, 0.04) inset",
          "color": "rgb(54, 54, 54)",
          "controlHeight": "2.7em",
          "disabled": "rgb(204, 204, 204)",
          "error": "rgb(245, 0, 87)",
          "fontSize": "1rem",
          "selectArrowColor": "rgb(0, 188, 212)",
          "spinnerColor": "rgb(0, 188, 212)",
          "spinnerDuration": "500ms",
          "transitionDuration": "110ms",
          "transitionProperty": "color, box-shadow, border",
          "transitionTimingFunction": "cubic-bezier(.25, .46, .45, .94)",
        },
      }
    }
  >
    <div
      className="c0"
      disabled={true}
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Internal#<SwitchField /> Should be styled component 1`] = `
.c0 {
  display: block;
  position: relative;
  margin: 0;
  font-size: 1rem;
  margin: 0.4em 0;
  color: rgb(54,54,54);
}

<div
  className="c0"
/>
`;

exports[`Internal#<SwitchField /> Should be styled component 2`] = `
.c0 {
  display: block;
  position: relative;
  margin: 0;
  font-size: 1rem;
  margin: 0.4em 0;
  color: rgb(204,204,204);
}

<div
  className="c0"
  disabled={true}
/>
`;
